修复部分模块bug
